# col

./: .gitignore  README.md  col-gui  col-predict  col-solve  continuous-solve  continuous_solve.py
deploy/: Dockerfile  render.yaml  resources.sh  start-all.sh  start-web.sh  start-worker.sh
gui/: package-lock.json  package.json
gui/src/: main.js  preload.js  renderer.html  renderer.js  style.css
predict/: estimate.py
python/: gui_server.py
python/col/: __init__.py  cgt.py  cli.py  complexity.py  core.py  dfs.py  endgame.py  shapes.py  tablebase.py
reports/: proof-miner-odd-rectangles.md
solver/: Cargo.toml
solver/src/: endgame.rs  lib.rs  main.rs  tablebase.rs
