[package]
name = "col-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "col_rs"
path = "src/lib.rs"

[[bin]]
name = "col-rs"
path = "src/main.rs"

[dependencies]
dashmap = "6.2.1"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-pickle = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
